idl-toolkit/models/test/vmodl/errors/UberErrors.vmodl
/*
 * Copyright 2012-2014 VMware, Inc.  All rights reserved.
 */
package vmodl.test.uber.errors;

import com.vmware.vapi.std.errors.InvalidArgument;

import vmodl.lang.*;


/** vAPI test interface for integration tests */
interface UberErrors {

    /**
     * echo an error
     *
     * @param input test value
     * @return same as {@param.name input}
     */
    InvalidArgument echoError(InvalidArgument input);

    /**
     * echo an optional error
     *
     * @param input test value
     * @param.optional input reason
     *
     * @return same as {@param.name input}
     * @return.optional reason
     */
    Optional<InvalidArgument> echoErrorOptional(
             Optional<InvalidArgument> input);

    /**
     * echo a list of errors
     *
     * @param input test value
     * @return same as {@param.name input}
     */
    List<InvalidArgument> echoErrorList(List<InvalidArgument> input);

    /**
     * echo any error
     *
     * @param input test value
     * @return same as {@param.name input}
     */
    Exception echoAnyError(Exception input);

    /**
     * echo any optional error
     *
     * @param input test value
     * @param.optional input reason
     *
     * @return same as {@param.name input}
     * @return.optional reason
     */
    Optional<Exception> echoAnyErrorOptional(Optional<Exception> input);

    /**
     * echo any list of errors
     *
     * @param input test value
     * @return same as {@param.name input}
     */
    List<Exception> echoAnyErrorList(List<Exception> input);
}
